# cox

./: pyproject.toml
src/copx/: copx_fastapi.py  copx_mcp.py  flow.py  nodes.py
src/copx/prompts/: prompt_archive.xml
src/copx/symbal_extractor/: symbol_extractor.py
src/copx/symbal_extractor/configs/: go.json  js.json  jsx.json  ts.json  tsx.json
src/cox/: cox_fastapi.py  cox_mcp.py  flow.py  nodes.py  project_declaration_map.py  utils.py
src/cox/symbal_extractor/configs/: python.json
src/cox/tools/: tool_view_file_declaration_map.py
